--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="script/mainJQ.js"></script>
+	<script src="script/main.js"></script>
 </body>
 </html>
